RESOLVED FIXED92025
SVG animation not working for elements inserted after parsing is finished
https://bugs.webkit.org/show_bug.cgi?id=92025
Summary SVG animation not working for elements inserted after parsing is finished
Florin Malita
Reported 2012-07-23 14:08:03 PDT
Created attachment 153859 [details] Fill animation not working Animation is activated from Document::implicitClose(), but deferred element insertion doesn't seem to hit that path.
Attachments
Fill animation not working (428 bytes, text/html)
2012-07-23 14:08 PDT, Florin Malita
no flags
Patch (6.23 KB, patch)
2012-08-01 10:16 PDT, Florin Malita
no flags
Patch for landing (6.21 KB, patch)
2012-08-01 11:34 PDT, Florin Malita
no flags
crawfish2_ganson.svg perftest run (437.92 KB, text/html)
2012-08-03 09:51 PDT, Florin Malita
no flags
Florin Malita
Comment 1 2012-08-01 10:16:39 PDT
Nikolas Zimmermann
Comment 2 2012-08-01 11:04:06 PDT
Comment on attachment 155829 [details] Patch Looks sane, r=me.
Dirk Schulze
Comment 3 2012-08-01 11:05:22 PDT
Dicsussing this patch on IRC now. At least the layout test needs an update.
Dirk Schulze
Comment 4 2012-08-01 11:10:56 PDT
Comment on attachment 155829 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=155829&action=review > LayoutTests/svg/animations/deferred-insertion.html:16 > + if (window.layoutTestController) > + layoutTestController.waitUntilDone(); We discussed the patch online during your review Niko. I am fine with the patch as well, but window.layoutTestController needs to be replaced.
Florin Malita
Comment 5 2012-08-01 11:34:23 PDT
Created attachment 155847 [details] Patch for landing
Florin Malita
Comment 6 2012-08-01 11:35:32 PDT
Thanks for reviewing this Niko & Dirk.
Nikolas Zimmermann
Comment 7 2012-08-01 12:52:08 PDT
(In reply to comment #4) > We discussed the patch online during your review Niko. I am fine with the patch as well, but window.layoutTestController needs to be replaced. Good catch!
WebKit Review Bot
Comment 8 2012-08-01 14:24:45 PDT
Comment on attachment 155847 [details] Patch for landing Clearing flags on attachment: 155847 Committed r124369: <http://trac.webkit.org/changeset/124369>
WebKit Review Bot
Comment 9 2012-08-01 14:24:49 PDT
All reviewed patches have been landed. Closing bug.
Philip Rogers
Comment 10 2012-08-02 13:50:46 PDT
I think this change may have introduced a performance regression: http://webkit-perf.appspot.com/graph.html#tests=[[1610803,2001,173262]]&sel=none&displayrange=7&datatype=running Pageload time went from 88ms to 92ms average. None of the boolean checks added in this patch are more than just local variable reads, so I don't know what's up.
Florin Malita
Comment 11 2012-08-03 09:41:29 PDT
(In reply to comment #10) > I think this change may have introduced a performance regression: > http://webkit-perf.appspot.com/graph.html#tests=[[1610803,2001,173262]]&sel=none&displayrange=7&datatype=running > > Pageload time went from 88ms to 92ms average. None of the boolean checks added in this patch are more than just local variable reads, so I don't know what's up. This seems unlikely not only because it's a lightweight test, but also because that code path is only hit on <svg> element insertion. And for this particular perftest, the conditional gets shortcut on the first test (document()->parsing() is true) as the SVG element is inserted during parsing. Have you ruled out all the other changes in range?
Florin Malita
Comment 12 2012-08-03 09:51:52 PDT
Created attachment 156402 [details] crawfish2_ganson.svg perftest run I ran the perftest locally, see attached graph. First 40 runs are without this patch, last 40 with it - I cannot see a difference.
Note You need to log in before you can comment on or make changes to this bug.