SVG animation not working for elements inserted after parsing is finished https://bugs.webkit.org/show_bug.cgi?id=92025

Reviewed by Nikolas Zimmermann.

Source/WebCore:

Time containers for SVG elements inserted after document parsing is finished need to be
initialized on insertion (since they've missed the Document::implicitClose() initialization
point).

Test: svg/animations/deferred-insertion.html

* svg/SVGSVGElement.cpp:
(WebCore::SVGSVGElement::insertedInto):

LayoutTests:

* svg/animations/deferred-insertion-expected.txt: Added.
* svg/animations/deferred-insertion.html: Added.


Canonical link: https://commits.webkit.org/110740@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@124369 268f45cc-cd09-0410-ab3c-d52691b4dbfc